# mlex_pytorch_autoencoders

./: .flake8  .gitignore  Dockerfile  Dockerfile_arm64  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_docker.yml  test-lint.yml
description/: pytorch_autoencoder_v0.0.3.json  pytorch_autoencoder_v0.0.4.json  pytorch_autoencoder_v0.0.5.json
docker/: Dockerfile  Dockerfile_arm64  requirements.txt  requirements_arm64.txt
docs/: concepts.md  getting_started.md
src/: dataloaders.py  dataset.py  datasets.py  helper_utils.py  inference.py  latent_space_evaluation.py  model.py  parameters.py  predict_model.py  train.py  train_model.py  tune.py  tune_model.py
src/datasets/: base_dataset.py  directory_dataset.py  tiled_dataset.py
